# summer-vacation

./: .gitignore  摄像头图像处理.md  智能车调试对话记录_2026-07-22.md
libraries/doc/: version.txt
libraries/sdk/mdk/linker/: mm32f3277g_flash.scf
libraries/zf_common/: zf_common_debug.c  zf_common_fifo.c  zf_common_function.c  zf_common_function.h  zf_common_headfile.h
libraries/zf_device/: zf_device_bluetooth_ch9141.c  zf_device_bluetooth_ch9141.h  zf_device_dl1a.c  zf_device_dl1a.h  zf_device_dm1xa.c  zf_device_dm1xa.h  zf_device_gps_tau1201.c  zf_device_gps_tau1201.h  zf_device_icm20602.c  zf_device_icm20602.h  zf_device_imu660ra.c  zf_device_imu660ra.h  zf_device_imu963ra.c  zf_device_imu963ra.h  zf_device_ips200.c  zf_device_ips200.h  zf_device_mpu6050.c  zf_device_mpu6050.h  zf_device_mt9v03x.c  zf_device_ov7725.c  zf_device_scc8660.c  zf_device_wifi_uart.c  zf_device_wifi_uart.h  zf_device_wireless_uart.c  zf_device_wireless_uart.h
libraries/zf_driver/: zf_driver_delay.c  zf_driver_delay.h  zf_driver_gpio.c  zf_driver_soft_iic.c  zf_driver_soft_spi.c
smartcarmain/: .clangd  CMakeLists.txt  compile_commands.json
smartcarmain/.cache/clangd/index/: calculation.h.9E37E56D4C4D0331.idx  image.h.FADD32E62DDA0402.idx  isr.c.5B48F4D129FB0B6A.idx  isr.c.679EBA454967FEA9.idx  isr.h.09ACC279C13B23E2.idx  isr.h.0D8DBC4DADFAEC59.idx  key.c.B353D524E792B36F.idx  key.h.7A5B4969269CBB01.idx  main.c.556070CF4ECB1DFB.idx  main.c.684B6D42BB25461C.idx  menu.c.2E55DE2ACC421D78.idx  menu.c.607E32C1368A597D.idx  menu.h.FB6461EBC1D51240.idx  menu.h.FDBD67DFFAC61D77.idx  motor.h.4D21F59ABFCC1F8F.idx  mymenu.c.AB1A112492288C7F.idx  mymenu.h.A0B8EEAF3E0A8E4F.idx
smartcarmain/cmake/: arm-none-eabi-gcc.cmake
smartcarmain/mdk/: mm32f327x_g8p.uvguix.csz18  mm32f327x_g8p.uvoptx  mm32f327x_g8p.uvprojx
smartcarmain/mdk/Listings/: MM32F327X_G8P.map  startup_mm32f3277g.lst
smartcarmain/mdk/Objects/: MM32F327X_G8P.axf  MM32F327X_G8P.build_log.htm  MM32F327X_G8P.htm  MM32F327X_G8P.lnp  calculation.crf  calculation.d  diskio.crf  diskio.d  ff.crf  ff.d  ffsystem.crf  ffsystem.d  ffunicode.crf  ffunicode.d  hal_adc.crf  hal_adc.d  hal_comp.crf  hal_comp.d  hal_dac.crf  hal_dac.d  hal_dma.crf  hal_dma.d  hal_exti.crf  hal_exti.d  hal_fsmc.crf  hal_fsmc.d  hal_gpio.crf  hal_gpio.d  hal_i2c.crf  hal_i2c.d  hal_iwdg.crf  hal_iwdg.d  hal_rcc.crf  hal_rcc.d  hal_rtc.crf  hal_rtc.d  hal_sdio.crf  hal_sdio.d  hal_spi.crf  hal_spi.d  (+126 more)
smartcarmain/user/inc/: IMU.h  calculation.h  image.h  isr.h  key.h  menu.h  motor.h  mymenu.h
smartcarmain/user/src/: IMU.c  calculation.c  image.c  isr.c  key.c  main.c  menu.c  motor.c  mymenu.c
